gitops/workloads/adminer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: mkcert-ca-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: adminer.hy-k8s.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adminer
                port:
                  number: 8080
  tls:
    - hosts:
        - adminer.hy-k8s.home.arpa
      secretName: adminer-tls # pragma: allowlist secret
